# uni_information_retrieval

./: README.md
pw1/: Cargo.toml
pw1/src/: common.rs  dictionary.rs  document.rs  lexer.rs  main.rs  tests.rs
pw1/src/storage/: json_dictionary_storage.rs  key_val_dictionary_storage.rs  mod.rs
pw2/: Cargo.toml
pw2/src/: common.rs  document.rs  file.rs  lexer.rs  logic_op.rs  main.rs  position.rs  term_index.rs
pw3/: Cargo.toml
pw3/src/: common.rs  document.rs  file.rs  inf_context.rs  lexer.rs  main.rs  position.rs  term_index.rs  two_word_index.rs
pw5/: Cargo.toml
pw5/src/: main.rs  term_index.rs
pw6/: Cargo.toml
pw6/src/: common.rs  lexer.rs  main.rs  query_lang.rs  term_index.rs
pw7/: Cargo.toml  remove_br.py
pw7/src/: common.rs  encoding.rs  fb2_segmenter.rs  lexer.rs  main.rs  plain_text_segmenter.rs  segment.rs  term_index.rs
pw8/: Cargo.toml
pw8/src/: common.rs  document.rs  file.rs  inf_context.rs  lexer.rs  main.rs  term.rs  term_index.rs
