[package]
name = "pw1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memmap = "0.7.0"
anyhow = "1.0.79"
threadpool = "1.8.1"
num_cpus = "1.16.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
